--- a/challenges.ipynb
+++ b/challenges.ipynb
@@ -31,10 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your name is Richard and your age is 38.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CREATE A FUNCTION\n",
+    "\n",
+    "def identity(name, age):\n",
+    "    print(\"Your name is \" + name + \" and your age is \" + age + \".\")\n",
+    "    \n",
+    "what_name = str(input(\"What is your name?: \"))\n",
+    "what_age = str(input(\"How old are you?: \"))\n",
+    "\n",
+    "identity(what_name,what_age)"
+   ]
   }
  ],
  "metadata": {
