another one done

--- a/challenges.ipynb
+++ b/challenges.ipynb
@@ -53,6 +53,56 @@
     "\n",
     "identity(what_name,what_age)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[54, 2, 95, 74, 55]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SORT A LIST\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "# create a function to sort the list based on the users choice\n",
+    "def sort_numbers(numbers, order):\n",
+    "    \n",
+    "    if order == 'asc':\n",
+    "        numbers.sort()\n",
+    "        \n",
+    "    elif order == 'desc':\n",
+    "        numbers.sort(reverse=True)\n",
+    "        \n",
+    "    elif order == 'none':\n",
+    "        pass\n",
+    "    \n",
+    "    else:\n",
+    "        print('Invalid order parameter')\n",
+    "        \n",
+    "    return numbers\n",
+    "\n",
+    "# Prompt the user for the number of numbers they want in their list\n",
+    "num_numbers = int(input(\"How many numbers do you want in your list? \"))\n",
+    "\n",
+    "# Generate a list of random integers\n",
+    "list_numbers = [random.randint(1, 100) for _ in range(num_numbers)]\n",
+    "\n",
+    "# Prompt the user for the desired order of the list\n",
+    "list_order = input(\"Do you want the list in ascending order (asc), descending order (desc), or unaltered (none)? \")\n",
+    "\n",
+    "sort_numbers(list_numbers, list_order)"
+   ]
   }
  ],
  "metadata": {
